# little

./: Cargo.toml  LICENSE  README.md
little-cli/: Cargo.toml  build.rs
little-cli/src/: main.rs
littled/: Cargo.toml  build.rs
littled/proto/: little.proto
littled/src/: commands.rs  main.rs
src/: command_processor.rs  little-cli.rs  littled.rs
