[package]
name = "little-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "little-cli"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4.2"