[package]
name = "little-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "little-cli"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
clap = { version = "4.4", features = ["derive"] }
tonic = "0.10"
prost = "0.12"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tokio-test = "0.4.2"

[build]
build-script = "build.rs"