[package]
name = "littled"
version = "0.1.0"
edition = "2021"

[lib]
name = "littled"
path = "src/lib.rs"

[[bin]]
name = "littled"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
ldk-node = "0.3.0"
clap = { version = "4.4", features = ["derive"] }
tonic = "0.10"
prost = "0.12"
warp = "0.3"
names = "0.14.0"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]